gccida/g3/bitmap_initialize
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_initialize/src/bitmap.c:1191:12: error: expected expression
*( _OWORD *)&head->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_initialize/src/bitmap.c:1191:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&head->first = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_initialize/src/obj/bitmap.o] Error 1
